# litestar-django

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/.workflows/: test.yaml
.github/workflows/: publish.yaml  test.yaml
litestar_django/: __init__.py  dto.py  types.py
tests/: conftest.py  test_dto_field_definitions.py  test_dto_integration.py
tests/some_app/: settings.py
tests/some_app/app/: apps.py  models.py
